--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
     "builds": [
-      { "src": "backend/ViLabs/wsgi.py", "use": "@vercel/python" }
+      { "src": "ViLabs/wsgi.py", "use": "@vercel/python" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "backend/ViLabs/wsgi.py" }
+      { "src": "/(.*)", "dest": "ViLabs/wsgi.py" }
     ]
   }
   
